# StudentaiV1

./: CMakeLists.txt  README.md  StudentasClass.h  vector1class.cpp  vector1struct.cpp  vector1struct.h
